console-route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2022-03-16T12:28:32Z"
    labels:
      app: minio
    name: console
    namespace: minio
    resourceVersion: "74440"
    uid: 160ec05c-05b3-495a-adb2-06d50aaf0ec5
  spec:
    host: console-minio.apps-crc.testing
    port:
      targetPort: 9001
    tls:
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIDSzCCAjMCFCZntg8HQ1SyYmV0jTSY6b49Nr+KMA0GCSqGSIb3DQEBCwUAMGIx
[...]
        bmrZoS46pJYd64Xg/G96YHxi4yG2eriHVwZp3df+tw==
        -----END CERTIFICATE-----
      insecureEdgeTerminationPolicy: Redirect
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEogIBAAKCAQEA2sOwu2/cwVaH7HSUbQTBrHA94kQymMCqiITigELzjjs3li4r
[...]
        2LBqGsRnQyGzvK+pgPWAXCgEPVA2k3B/axYFfCxVEozIniPf0Xc=
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: minio
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2022-03-16T12:28:32Z"
        status: "True"
        type: Admitted
      host: console-minio.apps-crc.testing
      routerCanonicalHostname: router-default.apps-crc.testing
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
